# steam-analyzer-python

./: .gitignore  README.md  appid.txt  backend.py  copilot.md  main.py  memory_analysis.py  memory_utils.py  pyproject.toml  requirements.txt  review_analyzer.py  utils.py
.github/: copilot-instructions.md
analyzers/: __init__.py  base_analyzer.py  bertopic_analyzer.py  language_report.py  ngram_analyzer.py  playtime_extremes.py  text_processor.py  tfidf_analyzer.py  timeline_analyzer.py  wordcloud_generator.py
docs/: APPID_TYPE_AUDIT.md  LANGUAGE_FILTER_FEATURE.md  MEMORY_MANAGEMENT.md  METADATA_ANALYSIS.md  STOPWORDS_MANAGER.md  TEXT_INSIGHTS_DASHBOARD.md
tabs/: __init__.py  base_tab.py  bertopic_analysis_tab.py  bertopic_stopwords_tab.py  data_collection_tab.py  extreme_reviews_tab.py  ngram_analysis_tab.py  text_insights_tab.py  tfidf_analysis_tab.py  timeline_analysis_tab.py
